nodesecltor-nginx-prod.yaml
---
apiVersion: v1
kind: Pod
metadata: 
  name: nginx-prod
spec: 
  nodeSelector:
    env: prod
  containers:
  - name: nginx
    image: nginx
