nw-policy-testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: random
  namespace: netpol-lab
  labels:
    app: random
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
