nw-policy-pod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-deny-all
  namespace: netpol-lab
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
  ingress: 
   - from:
     - podSelector:
          matchLabels:
            app: frontend
     ports:
        - protocol: TCP
          port: 80
